--- a/R checks/2_data_prep.qmd
+++ b/R checks/2_data_prep.qmd
@@ -21,6 +21,7 @@ library(bit64)
 library(tidylog)
 ```
 
+## Loading data
 ```{r load data}
 monthly <- readRDS("/Volumes/ExtremeSSD/SIPP Data Files/rds/sipp_monthly_combined.rds")
 joblevel_wide <- readRDS("/Volumes/ExtremeSSD/SIPP Data Files/rds/sipp_joblevel_combined_wide.rds") 
@@ -49,6 +50,7 @@ joblevel_wide <- joblevel_wide %>% mutate(
 )
 ```
 
+## Imputing Job IDs
 Here we impute those instances where someone had all of the earnings and job information we care about but did not have a jobid value for that specific job. Because we conduct later analyses at the month level we don't particularly care if this job is just an uncoded version of ejobid 101 , 102, 103 for instance. Put differently, it's unclear from the data quality flags (ajb\_ vars) why these are "not in universe" for jobid, but the records contain all the information we'd want so we can impute some fictional jobids. We lose the ability to track if these are the same jobs they held before/after that month but we aren't concerned with that.
 
 ```{r data preview for imputation }
@@ -130,9 +132,10 @@ Next we combine the monthly level dataframe with the wide joblevel file.
 full_data_base <- tidylog::left_join(monthly, joblevel_wide, 
                                      by = c("ssuid_spanel_pnum", "spanel", "swave", "monthcode"))
 ```
+
+
+## Filter to working age population 
 Then we filter to the working age population based on age at entry into dataset.
-
-
 ```{r filtering to working age sample by age at entry}
 full_data <- full_data_base %>% 
   group_by(ssuid_spanel_pnum) %>% 
@@ -141,7 +144,9 @@ full_data <- full_data_base %>%
   filter(age_entry >= 18 & age_entry <= 64) %>% ungroup()
 ```
 
-They changed the cooding of the unemployment flag (enjflag) between panels, so correcting for that here.
+
+## Standardizing the unemployment flag (enjflag)
+They changed the coding of the unemployment flag (enjflag) between panels, so correcting for that here.
 
 ```{r standardizing enjflag unemployment flag}
 # Unemployment flag is 0 = not unemployed and 1 = unemployed for 2014 panel. Then switches to 2 = not unemployed and 1 = unemployed for 2018 onwards. So recoding accordingly here 
@@ -151,7 +156,9 @@ full_data <- full_data %>%
                                      ifelse(enjflag == 0 | enjflag == 2, 0, NA)))) 
 ```
 
-Dropping those who never worked.
+
+
+## Dropping those who never worked.
 
 ```{r removing those who never worked}
 full_data <- full_data %>% 
@@ -165,6 +172,8 @@ full_data <- full_data %>%
 
 ```
 
+
+## Mark main job
 Now we need to mark their main job based on number of hours worked and keep only that row for the month.To do that we first do some renaming to make the reshaping easier. Then we reshape the job variables to long format. This is done once and then saved out as it's fairly computationally intensive.
 
 ```{r }
@@ -196,6 +205,8 @@ saveRDS(long, "/Volumes/ExtremeSSD/SIPP Data Files/rds/sipp_long_2014_2023.rds")
 long <- readRDS("/Volumes/ExtremeSSD/SIPP Data Files/rds/sipp_long_2014_2023.rds")
 ```
 
+
+## Creating employment flag
 Here we create a long_wd working dataset and leave the above dataset as a ground truth for data checks. Next we turn to create flags for the type of employment in each month. 1 = WS, 2 = SE, 3 = Other, and 4 = unemployed.
 
 ```{r create long_wd for leaving original long dataframe as reference}
@@ -228,7 +239,9 @@ long_wd %>%
   
 ```
 
+## Demographic variable consistency checks
 
+### Race/ethnicity 
 In the Stata analysis I noticed some issues with the sipp data having inconsistent race/ethnicity variables. Here again, as in the Stata version, we correct for this and impute the first race/eth reported forwards.
 
 For example, 378 people changed their response to whether or not they were hispanic during the course of their survey participation. Likewise, 1747 people changed their response to their race question during the course of the survey.
@@ -317,6 +330,7 @@ long_wd <- long_wd %>%
   )
 ```
 
+### Parent variable inconsistencies
 Similar to the race/ethnicity inconsistent coding, the parent variable has instances where someone flips from being a parent to not being a parent (at a scale that seems unlikely in the US mortality context). Obviously someone could go from not being a parent to being a parent, but we have people go from being a parent to not being a parent, using either of the parent variables we have (tceb or epar_scrnr). Really we're most interested in if they have a dependent child but we use this measure and impute forwards if someone ever reported having a child.
 
 ```{r}
@@ -384,8 +398,8 @@ long_wd <- long_wd %>% inner_join(full_year_markers, by = c("ssuid_spanel_pnum",
 
 table(long_wd$months_in_data) # confirming we have full years for everyone at this point. 
 ```
-
-Next we need to establish their frist year statuses so that we can group people according to how they're entering into SE.
+## Creating first year status flags
+Next we need to establish their first year statuses so that we can group people according to how they're entering into SE.
 
 ```{r function to find max mode}
 # this function calculates the mode of a set of values and breaks ties by selecting the larger mode. So in our use case we're defaulting towards unemployment if someone had 4 months of SE, 4 months of WS and 4 months of Unemployment we would categorize them as unemployed in that first year based on this funciton. 
@@ -406,7 +420,7 @@ mode_statuses <- long_wd %>% select(ssuid_spanel_pnum, swave, monthcode, employm
 long_wd <- long_wd %>% 
   left_join(mode_statuses, by = "ssuid_spanel_pnum") # this adds their mode status during the first year to all records for the individual. 
 ```
-
+## Creating consecutive months of unemployment measure
 We're also interested in the consecutive months of unemployment, not just when unemployment is most common status.
 
 A note on the unemployment measures. Our unemployment flag is based on enjflag variable which captures if during the month they had any period of unemployment. However, this period does not have to be a full month of unemployment. We previously used this variable equaling 1 as a flag for unemployment. We still use this, but given our new rule that allows for people to keep months where employment hours were less than 15 we have months where someone can be flagged as unemployed and still report earnings. This is a better reflection of reality, but wanted to raise it as a minor change.
@@ -450,7 +464,9 @@ long_wd <- long_wd %>%
   left_join(consec_unemp_coll, by = "ssuid_spanel_pnum")
 ```
 
-We decided to exclud those in the military and those who were ever employed as "other" employment type. So I drop those here.
+
+## Excluding military 
+We decided to exclude those in the military and those who were ever employed as "other" employment type. So I drop those here.
 
 ```{r filtering out those who started out as other employment as modal status}
 long_wd <- long_wd %>% 
@@ -460,7 +476,7 @@ long_wd <- long_wd %>%
   ungroup()
 
 ```
-
+## More generous unemployment measure y1_status_v2
 Next we create our more generous measure of unemployment where even if unemployment wasn't the modal status during the first year, if they experienced a period of 3 months of unemployment we mark them as unemployed during their first year.
 
 ```{r replicating y1_status_v2 from stata script}
@@ -491,8 +507,12 @@ Dropping those we only have one year of data for as we won't be able to set thei
 table(long_wd$months_in_data, useNA = "ifany")
 long_wd <- long_wd %>% 
   filter(months_in_data > 12 ) ## really only == 12 here since we've already filterd to only thsoe with full years. We can do this without grouping because we have 
+table(long_wd$months_in_data, useNA = "ifany")
+
 ```
 
+
+## Quantifying self-employment and work status
 Here I create measures of the number of months people held each employment status and number of hours.
 
 ```{r}
@@ -689,9 +709,10 @@ full_time_period_flags <- long_wd %>%
                                       ws_months/months == 1 ~ "Wage & Salary"))
 
 ## now with the left-join we'll keep only those we've identified above and get some summary stats on them. Could do this all above, but for clarity will keep it separated in case this gets moved to an analysis script later. 
-full_time_period_flags %>% 
+to_table <- full_time_period_flags %>% 
   left_join(long_wd, by = "ssuid_spanel_pnum") %>% 
   mutate(tpearn = case_when(
+        calyear == 2013 ~ tpearn * 292.7/233.0,
       calyear == 2014 ~ tpearn* 292.7/236.7,
       calyear == 2015 ~ tpearn*292.7/237,
       calyear == 2016 ~ tpearn*292.7/240.0,
@@ -703,6 +724,7 @@ full_time_period_flags %>%
       .default = NA
   ),
    msum = case_when(
+     calyear == 2013 ~ msum*292.7/233.0,
       calyear == 2014 ~ msum* 292.7/236.7,
       calyear == 2015 ~ msum*292.7/237,
       calyear == 2016 ~ msum*292.7/240.0,
@@ -713,13 +735,16 @@ full_time_period_flags %>%
       calyear == 2022 ~ msum,
       .default = NA
     )
-  ) %>% 
+  ) %>%
   #can group by employment_group here to bring it along since it's constant within individuals based on above restrictions
   group_by(ssuid_spanel_pnum, calyear, employment_group) %>% 
   summarize(tpearn = sum(tpearn, na.rm = TRUE),
             msum = sum(msum, na.rm = TRUE)) %>% 
   # the above gets us to yearly values. now we move to person-level summary stats of yearly values 
-  ungroup() %>% 
+  ungroup()
+  
+  
+  to_table %>% 
   gtsummary::tbl_summary(by = employment_group, include = c(tpearn, msum),
              statistic = list( ~ "{mean} [{median}] ({sd})")) %>% 
   gtsummary::add_overall() %>% 
